[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/upgradeMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/font/JoystickBold-62LA.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/upgrade_button_fixed.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/upgrade_bg_frame.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/upgrade_buttonpress_fixed.png" type="Texture" id=5]
[ext_resource path="res://assets/background/background2.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/upgrade_bg_container.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/catcoin_0.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/upgrade_bg.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/nextcat_0.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/upgrade_tab.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/progressbar.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/quest_tab.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/shop_tab.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0.611765, 0.588235, 0.588235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=3]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/upgrade_button_fixed.png-fdbeb31a53cad7ebf690b3e4ddcf56d8.stex"

[sub_resource type="StreamTexture" id=2]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/upgrade_buttonpress_fixed.png-dc32df52bc0c351e0b1d2f548de883d2.stex"

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="upgrade_bg" type="Sprite" parent="."]
position = Vector2( 164.837, 346.971 )
scale = Vector2( 0.526719, 0.526719 )
texture = ExtResource( 10 )

[node name="topbar" type="Sprite" parent="upgrade_bg"]
position = Vector2( 41.107, 37.151 )
scale = Vector2( 0.731646, 0.731646 )
texture = ExtResource( 6 )

[node name="catcoin_0" type="Sprite" parent="upgrade_bg"]
position = Vector2( -46.339, -606.444 )
scale = Vector2( 0.827103, 0.827103 )
texture = ExtResource( 8 )

[node name="silvercoin" type="Label" parent="upgrade_bg/catcoin_0"]
margin_left = -135.843
margin_top = -34.4663
margin_right = 138.157
margin_bottom = 34.5337
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="upgrade_bg/catcoin_0/silvercoin"]
autostart = true

[node name="progressbar" type="Sprite" parent="upgrade_bg"]
position = Vector2( 25.705, -40.921 )
scale = Vector2( 0.634, 0.634 )
texture = ExtResource( 13 )

[node name="upgrade_tab" type="Sprite" parent="upgrade_bg"]
position = Vector2( 29.68, 105.869 )
scale = Vector2( 0.627811, 0.627811 )
z_index = 1
texture = ExtResource( 12 )

[node name="shop_tab" type="Sprite" parent="upgrade_bg"]
position = Vector2( 29.303, 152.573 )
scale = Vector2( 0.632, 0.632 )
z_index = 1
texture = ExtResource( 15 )

[node name="quest_tab" type="Sprite" parent="upgrade_bg"]
position = Vector2( 30.983, 152.573 )
scale = Vector2( 0.632, 0.632 )
z_index = 1
texture = ExtResource( 14 )

[node name="returnButton" type="TextureButton" parent="."]
margin_left = 4.0
margin_top = 649.0
margin_right = 115.0
margin_bottom = 719.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade_bg_frame" type="Sprite" parent="."]
position = Vector2( 179.897, 366.375 )
scale = Vector2( 0.33068, 0.366772 )
texture = ExtResource( 4 )

[node name="clickUpgradeButton" type="TextureButton" parent="upgrade_bg_frame"]
margin_left = 169.275
margin_top = -26.0
margin_right = 429.275
margin_bottom = 125.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cpsUpgradeButton" type="TextureButton" parent="upgrade_bg_frame"]
margin_left = 169.275
margin_top = -396.0
margin_right = 429.275
margin_bottom = -245.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade_bg_container" type="Sprite" parent="upgrade_bg_frame"]
position = Vector2( -0.115234, -394.466 )
texture = ExtResource( 7 )

[node name="upgrade_bg_container2" type="Sprite" parent="upgrade_bg_frame"]
position = Vector2( -0.115234, -16.171 )
texture = ExtResource( 7 )

[node name="pet" type="Label" parent="upgrade_bg_frame"]
margin_left = -88.7002
margin_top = -37.151
margin_right = 185.301
margin_bottom = 31.849
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "Pet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clickUpgradeText" type="Label" parent="upgrade_bg_frame/pet"]
margin_left = 370.571
margin_top = 53.1484
margin_right = 492.572
margin_bottom = 122.149
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade" type="Label" parent="upgrade_bg_frame/pet"]
visible = false
margin_top = 87.3331
margin_right = 302.0
margin_bottom = 156.333
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "Upgrade:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="upgrade_bg_frame/pet"]
margin_left = -293.329
margin_top = 204.895
margin_right = -19.329
margin_bottom = 273.895
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clickLevelText" type="Label" parent="upgrade_bg_frame/pet/level"]
margin_left = 146.853
margin_top = 4.96692
margin_right = 420.853
margin_bottom = 73.9669
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fetch" type="Label" parent="upgrade_bg_frame"]
margin_left = -76.0373
margin_top = -401.766
margin_right = 221.962
margin_bottom = -332.766
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "Fetch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cpsUpgradeText" type="Label" parent="upgrade_bg_frame/fetch"]
margin_left = 362.518
margin_top = 42.2421
margin_right = 484.519
margin_bottom = 111.243
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade" type="Label" parent="upgrade_bg_frame/fetch"]
visible = false
margin_left = 279.586
margin_top = 77.9833
margin_right = 577.586
margin_bottom = 146.983
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "Upgrade:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="upgrade_bg_frame/fetch"]
margin_left = -312.675
margin_top = 193.337
margin_right = -38.6749
margin_bottom = 262.337
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cpsLevelText" type="Label" parent="upgrade_bg_frame/fetch/level"]
margin_left = 147.796
margin_top = 3.49106
margin_right = 421.796
margin_bottom = 72.4911
rect_pivot_offset = Vector2( -143.52, 148.778 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextcat_0" type="Sprite" parent="upgrade_bg_frame"]
position = Vector2( -275.455, -319.924 )
scale = Vector2( 1.51472, 1.36566 )
texture = ExtResource( 11 )

[node name="nextcat_1" type="Sprite" parent="upgrade_bg_frame"]
position = Vector2( -275.455, 64.2625 )
scale = Vector2( 1.51472, 1.36566 )
texture = ExtResource( 11 )

[node name="TextureButton" type="TextureButton" parent="upgrade_bg_frame"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
[connection signal="timeout" from="upgrade_bg/catcoin_0/silvercoin/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="returnButton" to="." method="_returnToGame"]
[connection signal="pressed" from="upgrade_bg_frame/clickUpgradeButton" to="." method="_on_upgradeButton_pressed"]
[connection signal="pressed" from="upgrade_bg_frame/cpsUpgradeButton" to="." method="_on_cpsUpgradeButton_pressed"]
